# minikin

./: .gitignore  .gitmodules  CMakeLists.txt
include/minikin/: AnalyzeStyle.h  CmapCoverage.h  FontCollection.h  FontFamily.h  GraphemeBreak.h  Hyphenator.h  Layout.h  LineBreaker.h  Measurement.h  MinikinFont.h  MinikinFontCoreText.h  MinikinFontFreeType.h  MinikinRefCounted.h  SparseBitSet.h  WordBreaker.h
include/txt/: FontAssetProvider.h  FontCollection.h  FontManager.h  FontStyle.h  HBFontAssetProvider.h  PaintRecord.h  Paragraph.h  ParagraphBuilder.h  ParagraphStyle.h  PlaceHolderRun.h  Platform.h  StyledRuns.h  Typeface.h  TypefaceFontAssetProvider.h
include/utils/: JenkinsHash.h  LruCache.h  TypeHelpers.h  UTF.h  WindowsUtils.h
libs/minikin/: AnalyzeStyle.cpp  CmapCoverage.cpp  FontCollection.cpp  FontFamily.cpp  FontLanguage.cpp  FontLanguage.h  FontLanguageListCache.cpp  FontLanguageListCache.h  GraphemeBreak.cpp  HbFontCache.cpp  HbFontCache.h  Hyphenator.cpp  Layout.cpp  LayoutUtils.cpp  LayoutUtils.h  LineBreaker.cpp  Measurement.cpp  MinikinFont.cpp  MinikinFontCoreText.cpp  MinikinFontFreeType.cpp  MinikinInternal.cpp  MinikinInternal.h  MinikinRefCounted.cpp  SparseBitSet.cpp  WordBreaker.cpp  unicode_emoji_h_gen.py
libs/txt/: FontAssetProvider.cpp  FontCollection.cpp  FontManager.cpp  FontStyle.cpp  HBFontAssetProvider.cpp  PaintRecord.cpp  ParagraphBuilder_txt.cpp  ParagraphBuilder_txt.h  ParagraphStyle.cpp  ParagraphTxt.cpp  ParagraphTxt.h  StyledRuns.cpp  Typeface.cpp  TypefaceFontAssetProvider.cpp
libs/txt/platform/: CTFontManager.h  PlatformFontMac.cpp  PlatformMac.mm  PlatformWindows.cpp
libs/utils/: JenkinsHash.cpp  UTF.cpp
sample/: CMakeLists.txt  SampleConfig.h.in  ct_example.cpp  example.cpp  paragraph_example.cpp  utf_util_example.cpp
